--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,6 @@
-body {
-  overflow-x: hidden;
-}
-
 .container {
-  height: 100%;
+  height: 100vh;
+  overflow-y: scroll;
 }
 
 .btn {
@@ -66,15 +63,76 @@ body {
   flex-direction: row;
 }
 
+.HomeFlex {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.order {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.Homeicon {
+  margin-top: 10px;
+  color: #353bf5;
+  margin-left: -10px;
+}
+
+.price {
+  margin-right: 15px !important;
+}
+
+.productPaper {
+  max-width: 300px;
+}
+
+.contain {
+  position: relative;
+  text-align: center;
+  color: white;
+  height: 25px;
+}
+
+.centered {
+  margin-top: -5px;
+  color: white;
+}
+
+.circle {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 1%;
+  left: 50%;
+  width: 14px;
+  height: 14px;
+  background-color: red;
+  border-radius: 50%;
+}
+
 @media screen and (max-width: 600px) {
   .header-edit {
     margin-top: 3px !important;
+  }
+  .list {
+    margin-left: -40px !important;
   }
 }
 
 @media screen and (min-width: 425px) {
   .Grid {
-    margin: 20px !important;
+    margin-left: 10px !important;
+    margin-right: 10px !important;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .paper {
+    max-width: 100vw;
   }
 }
 
@@ -93,5 +151,11 @@ body {
   }
   .top {
     margin-top: 0px;
+  }
+}
+
+@media screen and (min-width: 350px) {
+  .container {
+    overflow-x: hidden;
   }
 }
